--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PhoenixNode Test Dashboard</title>
+  <title>PhoenixNode Dashboard</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h1>🧠 PhoenixNode Continuity Dashboard</h1>
+  <h1>🧠 PhoenixNode Test Continuity Dashboard</h1>
 
   <div class="block">
     <strong>Status:</strong> Stable
