--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </style>
 </head>
 <body>
-  <h1>🧠 PhoenixNode Test Continuity Dashboard</h1>
+  <h1>🧠 PhoenixNode Continuity Dashboard</h1>
 
   <div class="block">
     <strong>Status:</strong> Stable
